source/styles/blocks/catalog.scss
.catalog {
  padding: 50px 0 44px;
  background-color: $color-bg-light;
}

.catalog__container {
  width: $mobile-width;
  margin: 0 auto;
  padding: 0 20px;
}

.catalog__filter {
  margin-top: 20px;
  margin-bottom: 36px;
}

.catalog__sort {
  margin-bottom: 20px;
}

.catalog__list {
  display: grid;
  gap: 20px;
  margin: 0;
  padding: 0;
  list-style: none;
}

@media (min-width: $tablet-width) {
  .catalog {
    padding: 80px 0 90px;
  }

  .catalog__container {
    width: $tablet-width;
    padding: 0 20px;
  }

  .catalog__title {
    margin-bottom: 20px;
  }

  .catalog__filter {
    margin-top: 20px;
    margin-bottom: 40px;
  }

  .catalog__sort {
    margin-bottom: 26px;
  }

  .catalog__list {
    grid-template-columns: repeat(2, 1fr);
    gap: 30px;
  }
}

@media (min-width: $desktop-width) {
  .catalog {
    padding: 100px 0 120px;
  }

  .catalog__container {
    display: grid;
    grid-template-columns: 318px 1fr;
    gap: 0 30px;
    width: $desktop-width;
    padding: 0 30px 0 50px;
  }

  .catalog__label,
  .catalog__title {
    grid-column: 1 / -1;
  }

  .catalog__title {
    margin-bottom: 40px;
  }

  .catalog__filter {
    margin: 0;
  }

  .catalog__sort {
    margin-bottom: 22px;
  }

  .catalog__content {
    min-width: 0;
  }

  .catalog__list {
    grid-template-columns: repeat(3, 1fr);
    gap: 30px;
  }
}

